--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
             <div class='PANO_c_replay_wrap' id='PANO_c_replay_wrap'>
                 <div class='PANO_c_replay_content'>
                     <h2>非常感谢</h2>
+                    <div class="line"></div>
+                    <p>您已完成欣赏</p>
                 </div>
             </div>
             <div id="PANO_c_replay_button">
