add new picture

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
-    <title>全景测试</title>
+    <title>GB童装17FW全景盛宴</title>
     <meta name="description" content="Page description. No longer than 155 characters." />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
@@ -20,6 +20,11 @@
 </head>
 
 <body style='background:black;'>
+
+    <audio controls="controls" autoplay="autoplay" style="display:none;">
+        <source src="./song.mp3" type="audio/mpeg" />
+    </audio>
+    
     <div id='PANO_experience_entrance'>
         <div id='PANO_ee_bkg_wrap'>
             <div id='PANO_ee_bkg' class="PANO_ee_bkg"></div>
@@ -27,8 +32,11 @@
         <div id="PANO_ee_content_wrap_id" class='PANO_ee_content_wrap'>
             <div class='PANO_ee_content'>
                 <div class='logo'></div>
-                <div class='logo-sub'></div>
-                <span id="PANO_experience_entrance_btn" class='button'>welcome</span>
+                <div class='logo-sub'>
+                    <p>欢迎走进</p>
+                    <p>GB童装17FW全景盛宴</p>
+                </div>
+                <span id="PANO_experience_entrance_btn" class='button'>点击体验</span>
             </div>
         </div>
     </div>
