--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body style='background:black;'>
 
     <audio controls="controls" autoplay="autoplay" style="display:none;">
-        <source src="./song.mp3" type="audio/mpeg" />
+        <source src="http://yuchav.qiniudn.com/song.mp3" type="audio/mpeg" />
     </audio>
     
     <div id='PANO_experience_entrance'>
