--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 <body style='background:black;'>
 
-    <audio controls="controls" autoplay="autoplay" style="display:none;">
-        <source src="http://yuchav.qiniudn.com/song.mp3" type="audio/mpeg" />
+    <audio controls="controls" autoplay="autoplay" style="width:1px;height:1px;overflow:hidden;">
+        <source src="./song.mp3" type="audio/mpeg" />
     </audio>
     
     <div id='PANO_experience_entrance'>
