--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- <audio id="audio" controls="controls" autoplay="autoplay" style="display:none;">
         <source src="./song.mp3" type="audio/mpeg" />
     </audio> -->
-     <audio id="bgmusic" src="http://www.w3school.com.cn/i/song.mp3" autoplay preload loop controls></audio>
+     <audio id="bgmusic" style="display:none;" src="http://yuchav.qiniudn.com/song.mp3" autoplay preload loop controls></audio>
     <script type="text/javascript">
     // 方法1: 现在微信官方已经推出了微信JS-SDK, 最好还是不要使用"野生"方式, 因为不知道什么时候就可以不能用了!
     // http://mp.weixin.qq.com/wiki/7/aaa137b55fb2e0456bf8dd9148dd613f.html
